Add operator single and batch execution